syntax = "proto3";
package google.protobuf;

message User{
  string user_id = 1;
  float x = 2;
  float y = 3;
  bool isDead = 4;
}

message ReqUserNew
{
    string user_id = 1;
    float x = 2;
    float y = 3;    
}

message ReqUserUpdate
{
    User user = 1;
}

message RequestRPC
{  
  oneof requests {
    ReqUserNew    reqUserNew = 1;
    ReqUserUpdate reqUserUpdate = 2;    
  }
}